--- a/views/index.jade
+++ b/views/index.jade
@@ -8,14 +8,31 @@ head
   script(src="/js/code.js")
   script(src="/socket.io/socket.io.js")
 body
-  nav.navbar.navbar-inverse
+ nav.navbar.navbar-inverse
   .container
-    .navbar-header
-      button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-      span.sr-only Toggle navigation
-      span.icon-bar
-      span.icon-bar
-      span.icon-bar
-    a.navbar-brand(href='#') socket Chat
+   .navbar-header
+    button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+    span.sr-only Toggle navigation
+    span.icon-bar
+    span.icon-bar
+    span.icon-bar
+   a.navbar-brand(href='#') Socket Chat
   #navbar-collapse.navbar-collapse
-    ul.nav.navbar-nav
+   ul.nav.navbar-nav
+ .container
+  .row
+   .col-md-8
+    #userFormWrap
+     h1 Create Username
+      form#userForm
+       label Username
+       input#username.form-control(type='text', placeholder='Enter Username...')
+       br
+       button.btn.btn-default(type='submit') Submit
+    #mainWrap
+     h1 Speak Your Mind
+     form#chatForm
+      .form-group
+      textarea#chatInput.form-control(name='body', placeholder='Say Something...')
+      br
+      button.btn.btn-default(type='submit') Submit
