list of users in chat section

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,3 +36,8 @@ body
       textarea#chatInput.form-control(name='body', placeholder='Say Something...')
       br
       button.btn.btn-default(type='submit') Submit
+     #chatWindow.well
+  .col-md-4
+   h3 Chat Users
+   ul.list-group
+    #users
